corrected display div in css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<h4>The Opolumero of Ikorodu Kingdom and Its Environs</h4>
 </section>
 <img style="width:100%" 	src="img/img1.jpeg">
-	<div>
+	<div class="container">
 		<div class="sideone">
 			<h3>Birthday Wishes</h3>
 			<p><b>MY WISH, MY BENEFACTOR</b></p>
