corrected the center alignment part

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<h5>Majority Leader, Lagos State House of Assembly</h5>
 	<p>Rep Ikorodu Constituency I</p>
 	<h4>The Opolumero of Ikorodu Kingdom and Its Environs</h4>
+	<p>Celebrated his 52<sup>nd</sup> birthday on 25<sup>th</sup> of October 2016</p> &nbsp; <span>Thanks for the wishes and greetings!</span>
+
 </section>
 <img style="width:100%" 	src="img/img1.jpeg">
 	<div class="container">
@@ -155,9 +157,10 @@
 
 			<p>Good morning and happy birthday to you sir, our convener, the Majority Leader  LSHA, A philanthropist, embodiment of humanity, image of dignity Trustworthy, you will witness more years to come in the mighty name of God, in everything and in health you will prosper as your soul prospereth, and it shall be well with you and your family in the mighty name of God</p>
 			<span><b>Dcns Adegbulugbe</b></span>
+
+			<p>Happy birthday to my Boss. Wishing you Long Life and Prosperity in good health and more wealth. You coast shall be enlarged, your shall move from success to succes beyond the common thinking of Men</p><span><b>Duchess Abike Allison 'Supo</b></span>
 		</div>
-		</br><p></p>
-		<span style="text-align:center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;click this link to see my facebook profile: &nbsp;<a href="https://www.facebook.com/korweey">UltRab Comms &copy; 2016</a></span>
+				
 		<div class="sidethree">
 			<h3>BIRTHDAY WISHES</h3>
 			<p><b>MY BROTHER</b></p>
@@ -188,9 +191,9 @@
 			<span>"I like to see a man who is proud of the place he lives. I like to see a man live, so that the place he lives, is proud of him". When you observe the numerous encomiums flooding in since days before the birthday of our Majority leader,Hon. S O B Agunbiade, it's a proof that his place(spanning across the state beyond his primary constituency), is proud of him, according to ABRAHAM LINCOLN.</br>
 			Now this can only come from one thing: In his service to the people and where he lives, he has done so well as one who is proud of the place he lives. I therefore pray that God too will reward your service with JOY UNSPEAKABLE in Jesus name, Amen. HAPPY BIRTHDAY</span></br>
 			<b>Koye Adejumo</b>
-				<div style="height:600px width:50%">
-					<img src="img/yakskemidris.jpeg">
-					<img src="img/sobmediateam.jpeg">
+				<div>
+					<img class="img1" src="img/yakskemidris.jpeg">
+					<img class="img1" src="img/sobmediateam.jpeg">
 				</div>
 			<p>Ore, as you're a year older today, my family and humble self celebrate with you. No doubt, like I have been saying you deserve a higher responsibility, which I believe shall become achievable in no distant time, In shall Allah. You're my pride, pride of Ikorodu, pride of Lagos. By the special grace of God, you SHALL become the pride of the nation. Yes, you're on the right cause. 
 			<br/><b>Congratulations! </b>
@@ -232,12 +235,11 @@
 
 			<p>My Boss, my mentor, aduro ti ni lojo isoro, a good servant, happy birthday sir! When I was lost in my political wilderness and looking for direction, it was you God used to restore my hope and audacity. You have continuously show that no amount of resources used in furthering the cause of humanity can be too much and that, there is always reward for service. Your political leadership has been a blessing to many of us. You have reshaped my political thinking and illuminate my blurred vision with your practical teaching about dynamics of power, leadership and soul reawakening. Your philosophy, " what is it that God can do?" has been my guiding principles and brought me this far. Uncle Sanai, your dreams, vision and plans for Ikorodu is no doubt huge and would live beyond your physical presence but my oga, you shall live to fulfill all your heart desires for Ikorodu and humanity.  You shall live to fulfill all your destinies in life. May Ikorodu ancestors, our past heroes, the love of those living and the hope of those still coming guide, protect and give you the ability and capacity to take Ikorodu to the Promise land. May God crown your efforts.
 			S.O.B wa de bu da. Ase Edumare!!</p>
-			<span><b>JIMOH AZEEZ Abiodun (Olosugbo)</b></span>
+			<span><b>JIMOH AZEEZ Abiodun (Olosugbo)</b></span> 
 
-
-
-
-			</div>
+		</div>
+			<br />
+			<p style="text-align:center clear:both"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;click this link to see my FB profile: &nbsp;<a href="https://www.facebook.com/korweey">UltRab Comms &copy; 2016</a></span></p>
 	</div>
 </body>
  </html>
