ajusted the background color

--- a/index.html
+++ b/index.html
@@ -182,8 +182,6 @@
 			<p>Today marks another new begining, Ur life is very motivating n blessings to others. May d Lord criwn ur years wt goodhelth and d favour of God be permanent in U n Urs forever. Opomulero of Ikorodu kingdom. Happy birthday sir!</p>
 			<span><b>Com. Mrs Kehinde Okeowo</b></span>
 			
-			
-
 			<p>Blessed are those people who commit their lives to the service to  humanity .It shall be well with them,since you are one of them,your birthday is blessed and it is well with the remain years of your life.I am wishing you blessed birthday.</p>
 			<span><b>Akinyemi Toba</b></span>
 						
@@ -239,7 +237,7 @@
 
 		</div>
 			<br />
-			<p style="text-align:center clear:both"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;click this link to see my FB profile: &nbsp;<a href="https://www.facebook.com/korweey">UltRab Comms &copy; 2016</a></span></p>
+			<p style="text-align:center clear:both"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;click this link to see my FB profile: &nbsp;<a class="a" href="https://www.facebook.com/korweey">UltRab Comms &copy; 2016</a></span></p>
 	</div>
 </body>
  </html>
