changed pattern of display

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 			 
 			Aboki S.O.B</span></br>
 
-			<img style="width:100% height:250px" src="img/sobchildren.jpeg">
-			<img style="width:100% height:250px" src="img/sobschl.jpeg">
+			<img style="width:170px height:200" src="img/sobchildren.jpeg">
+			<img style="width:170px height:200px" src="img/sobschl.jpeg">
 
 			<p><b>HAPPY BIRTHDAY TO AN ENIGMA</b></p>
 			<span>I suddenly lost adequate words to celebrate my Egbon today, because the thought of you and your person overwhelm me anytime, ever since that day I bumped into your private meeting two years ago, unannounced. I have met men of powers, I have seen men of great wealth, I have seen men who control and "run" things, I have interacted with men of valour, I have dined with royals, I have interacted with worthy leaders, I have seen "politicians and politrickians", BUT I am yet to see an S.O.B in them all.</br>
@@ -90,7 +90,7 @@
 
 			<img style="width:100%" src="img/fb25.jpeg">
 
-			<p>The Majority Leader is proved to us once again that he is a grassroot politician, a leader per excellence.... Now taking his birthday to the grassroot! The primary school he attended....hmmm! What a visionary Divine Messenger! HBD sir, Igba Odun, Odun Kan Ni Oooooo</p>
+			<p>The Majority Leader has proved to us once again that he is a grassroot politician, a leader per excellence.... for taking his birthday to the grassroot; The primary school he attended....hmmm! What a visionary Divine Messenger! HBD sir, Igba Odun, Odun Kan Ni Oooooo</p>
 			<span><b>Yewande Ajose (Yewis) and Rabiu Qawiyy (Korweey)</b></span>
 		</div>	
 
@@ -164,8 +164,8 @@
 		<div class="sidethree">
 			<h3>BIRTHDAY WISHES</h3>
 			<p><b>MY BROTHER</b></p>
-			<img src="img/sobjimi.jpeg">
-			<img src="img/sobjimihands.jpeg">
+			<img class="img1" src="img/sobjimi.jpeg">
+			<img class="img1" src="img/sobjimihands.jpeg">
 			<span>As a new day breaks in your life,  it's indeed our pleasure to stand with you on this auspicious occasion. There have been twists and turns, but the abiding glory of almighty has seen you through,  placing you ahead of time,  as you celebrate today, on behalf of myself and the entire iCare Foundation team, I pray Allah strengthen your resolve to do more and consolidate your wishes for the ultimate good. Happy Birthday to our own Majority Leader. May the years ahead be more fulfilling. Amen</span>
 			<br/></br>
 			<b>Babajimi Benson, MHR</b>
@@ -237,7 +237,8 @@
 
 		</div>
 			<br />
-			<p style="text-align:center clear:both"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;click this link to see my FB profile: &nbsp;<a class="a" href="https://www.facebook.com/korweey">UltRab Comms &copy; 2016</a></span></p>
+			
 	</div>
+	<p style="text-align:center clear:both"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;click this link to see my FB profile: &nbsp;<a class="a" href="https://www.facebook.com/korweey">UltRab Comms &copy; 2016</a></span></p>
 </body>
  </html>
